--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "get-audio-duration": "^3.0.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1"
